--- a/loginstyle.css
+++ b/loginstyle.css
@@ -43,7 +43,7 @@ height: 100%;
     width: 100%;
     height: 239.04px;
     position: absolute;
-    background-image: url(../img/trazado1.svg); 
+    background-image: url(trazado1.svg); 
     animation: ola1 7s linear infinite;
     
     
@@ -61,7 +61,7 @@ height: 100%;
     width: 100%;
     height: 239px;
     position: absolute;
-    background-image: url(../img/Trazado2.svg);
+    background-image: url(Trazado2.svg);
     animation: ola2 7s linear infinite -.125s, movi 7s ease -.125s infinite;
 }
 
